add list to test